2012-07-27  Gary Benson  <gbenson@redhat.com>

	[BZ #14298]
	* elf/rtld.c: Include <stap-probe.h>.
	(dl_main): Added static probes "init_start" and "init_complete".
	* elf/dl-load.c: Include <stap-probe.h>.
	(lose): Take new parameter "nsid".
	Added static probe "map_failed".
	(_dl_map_object_from_fd): Pass namespace id to lose.
	Added static probe "map_start".
	(open_verify): Pass namespace id to lose.
	* elf/dl-open.c: Include <stap-probe.h>.
	(dl_open_worker) Added static probes "map_complete", "reloc_start"
	and "reloc_complete".
	* elf/dl-close.c: Include <stap-probe.h>.
	(_dl_close_worker): Added static probes "unmap_start" and
	"unmap_complete".
	* elf/rtld-debugger-interface.txt: New file documenting the above.

2012-07-26  Roland McGrath  <roland@hack.frob.com>

	* sunrpc/rpc_hout.c (pdeclaration): Call f_print with a "%s" format
	rather than a string variable.
	* sunrpc/rpc_main.c (h_output): Likewise.
	* sunrpc/rpc_svcout.c (write_real_program): Likewise.

2012-07-26  Pino Toscano  <toscano.pino@tiscali.it>

	* inet/check_native.c: New file.

2012-07-26  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13629]
	* math/s_clog.c (__clog): Use __log1p or direct log1p calculation
	if larger part has absolute value 1.0.
	* math/s_clog10.c (__clog10): Likewise.
	* math/s_clog10f.c (__clog10f): Likewise.
	* math/s_clog10l.c (__clog10l): Likewise.
	* math/s_clogf.c (__clogf): Likewise.
	* math/s_clogl.c (__clogl): Likewise.
	* math/libm-test.inc (clog_test): Add more tests.
	(clog10_test): Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

	* elf/tst-auditmod1.c (pltenter): Remove all definitions of macro.
	(pltexit): Likewise.
	(La_regs): Likewise.
	(La_retval): Likewise.
	(int_retval): Likewise.
	Update #error for removed macros to refer only to definitions in
	tst-audit.h.
	* elf/tst-auditmod3b.c (pltenter): Remove all definitions of
	macro.
	(pltexit): Likewise.
	(La_regs): Likewise.
	(La_retval): Likewise.