@@ -1,3 +1,7 @@
+2012-07-27  David S. Miller  <davem@davemloft.net>
+
+	* sysdeps/sparc/fpu/libm-test-ulps: Update.
+
 2012-07-27  Gary Benson  <gbenson@redhat.com>
 
 	[BZ #14298]
